[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "strategicaileader-content-authority-hub"
version = "0.1.0"
description = "Content Authority Hub: analysis, APIs, and reporting toolkit"
authors = [
    { name="Richard Naimy", email="richnaimy@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.8"
dependencies = []

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]